# SII_PE_best-practice

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
cli/: main.py
config/: default.yaml
config/examples/: arc_puzzle.yaml  movie_reranking.yaml
examples/: quick_start.py
examples/data/: arc_instruction.txt  arc_prompt.json  arc_sample.jsonl  movie_prompt.json  movie_sample.jsonl
sii_pe/: config.py
sii_pe/agent/: __init__.py  evaluate.py  session.py
sii_pe/core/: optimizer.py  population.py  prompt_candidate.py
sii_pe/core/strategies/: ape.py  base.py  evolutionary.py  grid_search.py
sii_pe/infra/: client_pool.py  evaluator.py  llm_caller.py  persistence.py
sii_pe/tasks/: arc_puzzle.py  base_task.py  movie_reranking.py
sii_pe/workflow/: auto_optimize.py  orchestrator.py  pipeline_setup.py  report_generator.py  researcher.py  task_parser.py
tests/: test_agent_pipeline.py
